# workshop-ambientes-virtuais

./: README.md
conda/: README.md  ambiente.yml
pipenv/: Pipfile  README.md
poetry/: README.md  app.py  pyproject.toml
pyenv/: README.md
virtualenv/: README.md  requirements.txt
